# parallel_lqr

./: CMakeLists.txt  CMakeListsLINUX.txt  README.md  endpoint_constraint.cpp  endpoint_constraint.h  lqr_system.cpp  lqr_system.h  numerical_gradient.cpp  numerical_gradient.h  parent_trajectory.cpp  parent_trajectory.h  run_parent_traj.cpp  running_constraint.cpp  running_constraint.h  running_cost.cpp  terminal_cost.h  test_trajectory.cpp  trajectory.cpp  trajectory.h
src/: CMakeLists.txt  ECQPSolver.cpp  ECQPSolver.h  dynamics.cpp  dynamics.h  endpoint_constraint.h  equality_constrained_endpoint_constraint.h  equality_constrained_running_constraint.h  matplotlibcpp.h  numerical_gradient.cpp  numerical_gradient.h  parent_trajectory.cpp  parent_trajectory.h  running_constraint.cpp  running_constraint.h  running_cost.h  terminal_cost.cpp  terminal_cost.h  test_1d.cpp  test_penalty_method.cpp  test_trajectory.cpp  trajectory.cpp  trajectory.h
src/scalapack/: makefile  pbandsolve_lqr.c
src/scalapack/pblasc/: make.inc  makefile  pblasc.lst
src/scalapack/pblasc/_results/_libintel64_intelmpi_intel_noopt_lp64/: pbandsolve_lqr_example.txt  pblas1_d_example.txt  pblas1_s_example.txt  pblas2_d_example.txt  pblas2_s_example.txt  pblas3_d_example.txt  pblas3_s_example.txt
src/scalapack/pblasc/in/: lqr.in  pblas1ex.in  pblas2ex.in  pblas3ex.in
src/scalapack/pblasc/source/: makefile  pbandsolve_lqr.c  pblas1_d_example.c  pblas1_s_example.c  pblas2_d_example.c  pblas2_s_example.c  pblas3_d_example.c  pblas3_s_example.c  pblas_examples.h
